# databend

./: QueryFragmentActions_example
.devcontainer/: devcontainer.json
scripts/ci/: ci-run-stateless-tests-cluster.sh
scripts/ci/deploy/: databend-query-cluster-3-nodes.sh
scripts/ci/deploy/config/: databend-meta-node-1.toml  databend-meta-node-2.toml  databend-meta-node-3.toml  databend-query-node-1.toml  databend-query-node-2.toml  databend-query-node-3.toml
src/common/base/src/base/: global_runtime.rs
src/common/base/src/runtime/: global_runtime.rs
src/common/tracing/src/: logging.rs
src/query/catalog/src/plan/: datasource.rs
src/query/catalog/src/plan/datasource/: datasource_plan.rs
src/query/pipeline/core/: Cargo.toml
src/query/pipeline/core/src/processors/: port_trigger.rs  processor.rs
src/query/pipeline/core/tests/it/pipelines/processors/: port_test.rs  resize.rs
src/query/service/src/api/rpc/: flight_client.rs  flight_service.rs
src/query/service/src/interpreters/: interpreter_select.rs  interpreter_select_v2.rs
src/query/service/src/interpreters/fragments/: plan_fragment.rs  query_fragment_actions.rs  query_fragment_actions_display.rs
src/query/service/src/interpreters/plan_schedulers/: plan_scheduler_query.rs
src/query/service/src/pipelines/: pipeline_builder.rs
src/query/service/src/pipelines/executor/: executor_graph.rs  executor_tasks.rs  executor_worker_context.rs  pipeline_executor.rs  pipeline_pulling_executor.rs  pipeline_pushing_executor.rs
src/query/service/src/schedulers/: scheduler.rs
(+13 files in other folders)
